--- a/projeto-carrinhoCompras/inicio.html
+++ b/projeto-carrinhoCompras/inicio.html
@@ -16,17 +16,20 @@
             <img src="imagens/Form.png" alt="Logo">
         </div>
         <div class="cart-icon">
-            <img src="imagens/Group 139.png" alt="Carrinho">
+            <img src="imagens/Group 139.png" alt="Carrinho" onclick="toggleCart()">
         </div>
     </header>
     
     <main>
+        <div class="banner">
+            <img src="imagens/Banner.png" alt="">
+        </div>
         <section class="category">
             <h2>Bebidas:</h2>
             <div class="item">
                 <img src="imagens/agua.png" alt="Bebida 1">
                 <p>Água c/ Gás 1,5L</p>
-                <p>R$ 3,99</p>
+                <p class="preco">R$ 3,99</p>
                 <div class="quantity-control">
                     <button class="quantity-btn" onclick="decreaseQuantity(this)">-</button>
                     <input type="text" value="1">
@@ -37,7 +40,7 @@
             <div class="item">
                 <img src="imagens/suco.png" alt="Bebida 1">
                 <p>Suco de Uva 1,5L</p>
-                <p>R$ 15,89</p>
+                <p class="preco">R$ 15,89</p>
                 <div class="quantity-control">
                     <button class="quantity-btn" onclick="decreaseQuantity(this)">-</button>
                     <input type="text" value="1">
@@ -48,7 +51,7 @@
             <div class="item">
                 <img src="imagens/powerade.png" alt="Bebida 1">
                 <p>Powerade 500ml</p>
-                <p>R$ 2,50</p>
+                <p class="preco">R$ 2,50</p>
                 <div class="quantity-control">
                     <button class="quantity-btn" onclick="decreaseQuantity(this)">-</button>
                     <input type="text" value="1">
@@ -59,7 +62,7 @@
             <div class="item">
                 <img src="imagens/monster.png" alt="Bebida 1">
                 <p>Monster Uva</p>
-                <p>R$ 8,29</p>
+                <p class="preco">R$ 8,29</p>
                 <div class="quantity-control">
                     <button class="quantity-btn" onclick="decreaseQuantity(this)">-</button>
                     <input type="text" value="1">
@@ -70,7 +73,7 @@
             <div class="item">
                 <img src="imagens/coca.png" alt="Bebida 1">
                 <p>Coca-Cola 2L</p>
-                <p>R$ 8,99</p>
+                <p class="preco">R$ 8,99</p>
                 <div class="quantity-control">
                     <button class="quantity-btn" onclick="decreaseQuantity(this)">-</button>
                     <input type="text" value="1">
@@ -81,7 +84,7 @@
             <div class="item">
                 <img src="imagens/mate.png" alt="Bebida 1">
                 <p>Chá Mate Leão 1,5L</p>
-                <p>R$ 5,69</p>
+                <p class="preco">R$ 5,69</p>
                 <div class="quantity-control">
                     <button class="quantity-btn" onclick="decreaseQuantity(this)">-</button>
                     <input type="text" value="1">
@@ -97,7 +100,7 @@
             <div class="item">
                 <img src="imagens/doritos.png" alt="Salgadinho 1">
                 <p>Doritos</p>
-                <p>R$ 13,99</p>
+                <p class="preco">R$ 13,99</p>
                 <div class="quantity-control">
                     <button class="quantity-btn" onclick="decreaseQuantity(this)">-</button>
                     <input type="text" value="1">
@@ -108,7 +111,7 @@
             <div class="item">
                 <img src="imagens/sensacao.png" alt="Salgadinho 1">
                 <p>Sensações</p>
-                <p>R$ 7,99</p>
+                <p class="preco">R$ 7,99</p>
                 <div class="quantity-control">
                     <button class="quantity-btn" onclick="decreaseQuantity(this)">-</button>
                     <input type="text" value="1">
@@ -119,7 +122,7 @@
             <div class="item">
                 <img src="imagens/ruffle.png" alt="Salgadinho 1">
                 <p>Ruffles</p>
-                <p>R$ 12,79</p>
+                <p class="preco">R$ 12,79</p>
                 <div class="quantity-control">
                     <button class="quantity-btn" onclick="decreaseQuantity(this)">-</button>
                     <input type="text" value="1">
@@ -130,7 +133,7 @@
             <div class="item">
                 <img src="imagens/cheetos.png" alt="Salgadinho 1">
                 <p>Cheetos</p>
-                <p>R$ 11,99</p>
+                <p class="preco">R$ 11,99</p>
                 <div class="quantity-control">
                     <button class="quantity-btn" onclick="decreaseQuantity(this)">-</button>
                     <input type="text" value="1">
@@ -141,7 +144,7 @@
             <div class="item">
                 <img src="imagens/lays.png" alt="Salgadinho 1">
                 <p>Lay`s</p>
-                <p>R$ 10,59</p>
+                <p class="preco">R$ 10,59</p>
                 <div class="quantity-control">
                     <button class="quantity-btn" onclick="decreaseQuantity(this)">-</button>
                     <input type="text" value="1">
@@ -152,7 +155,7 @@
             <div class="item">
                 <img src="imagens/pringles.png" alt="Salgadinho 1">
                 <p>Pringles</p>
-                <p>R$ 9,99</p>
+                <p class="preco">R$ 9,99</p>
                 <div class="quantity-control">
                     <button class="quantity-btn" onclick="decreaseQuantity(this)">-</button>
                     <input type="text" value="1">
@@ -168,7 +171,7 @@
             <div class="item">
                 <img src="imagens/batata.png" alt="Hortalica 1">
                 <p>Batata</p>
-                <p>R$ 4,99</p>
+                <p class="preco">R$ 4,99<small>kg</small></p>
                 <div class="quantity-control">
                     <button class="quantity-btn" onclick="decreaseQuantity(this)">-</button>
                     <input type="text" value="1">
@@ -179,7 +182,7 @@
             <div class="item">
                 <img src="imagens/tomate.png" alt="Hortalica 1">
                 <p>Tomate</p>
-                <p>R$ 1,99</p>
+                <p class="preco">R$ 1,99<small>kg</small></p>
                 <div class="quantity-control">
                     <button class="quantity-btn" onclick="decreaseQuantity(this)">-</button>
                     <input type="text" value="1">
@@ -190,7 +193,7 @@
             <div class="item">
                 <img src="imagens/cenoura.png" alt="Hortalica 1">
                 <p>Cenoura</p>
-                <p>R$ 2,59</p>
+                <p class="preco">R$ 2,59<small>kg</small></p>
                 <div class="quantity-control">
                     <button class="quantity-btn" onclick="decreaseQuantity(this)">-</button>
                     <input type="text" value="1">
@@ -201,7 +204,7 @@
             <div class="item">
                 <img src="imagens/banana.png" alt="Hortalica 1">
                 <p>Banana</p>
-                <p>R$ 3,99</p>
+                <p class="preco">R$ 3,99<small>kg</small></p>
                 <div class="quantity-control">
                     <button class="quantity-btn" onclick="decreaseQuantity(this)">-</button>
                     <input type="text" value="1">
@@ -212,7 +215,7 @@
             <div class="item">
                 <img src="imagens/limao.png" alt="Hortalica 1">
                 <p>Limão Taiti</p>
-                <p>R$ 5,99</p>
+                <p class="preco">R$ 5,99<small>kg</small></p>
                 <div class="quantity-control">
                     <button class="quantity-btn" onclick="decreaseQuantity(this)">-</button>
                     <input type="text" value="1">
@@ -223,7 +226,7 @@
             <div class="item">
                 <img src="imagens/abacaxi.png" alt="Hortalica 1">
                 <p>Abacaxi</p>
-                <p>R$ 4,99</p>
+                <p class="preco">R$ 4,99<small>un</small></p>
                 <div class="quantity-control">
                     <button class="quantity-btn" onclick="decreaseQuantity(this)">-</button>
                     <input type="text" value="1">
@@ -234,6 +237,21 @@
             <!-- Repita para outros itens -->
         </section>
     </main>
+
+    <div id="cart-sidebar" class="cart-sidebar">
+        <div class="cart-header">
+            <span class="close-cart" onclick="toggleCart()">X</span>
+            <h2>Carrinho de Compras</h2>
+            <p id="cart-item-count">0 Items</p>
+        </div>
+        <div class="cart-items" id="cart-items">
+            <!-- Os itens adicionados ao carrinho aparecerão aqui -->
+        </div>
+        <div class="cart-total">
+            <h3>Total: R$ <span id="total-price">0.00</span></h3>
+            <button class="checkout-btn">Finalizar Pedido</button>
+        </div>
+    </div>
 
     <script src="script.js"></script>
 </body>
